tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/InterviewTemplate__c.object-meta.xml
<CustomObject>
    <label>InterviewTemplate</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterviewTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>