tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Add_Staff_Signature_Block__c.field-meta.xml
<CustomField>
    <fullName>Add_Staff_Signature_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Staff Signature Block</label>
    <type>Checkbox</type>
</CustomField>