tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Allow_Benefits_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Allow_Benefits_Disbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Benefits Disbursement</label>
    <type>Checkbox</type>
</CustomField>