tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Allow_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Allow_Diagnoses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Diagnoses</label>
    <type>Checkbox</type>
</CustomField>