tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Allow_Goal_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Goal_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Goal Assignment</label>
    <type>Checkbox</type>
</CustomField>