tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/allowed_cpt_codes__c.field-meta.xml
<CustomField>
    <fullName>allowed_cpt_codes__c</fullName>
    <description>Optional explicit CPT code allowlist for this interview template. Enter one or more CPT codes separated by commas, semicolons, spaces, or new lines.</description>
    <label>Allowed CPT Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>