tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Available_for_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Mobile</label>
    <type>Checkbox</type>
</CustomField>