tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Consent_Required__c.field-meta.xml
<CustomField>
    <fullName>Consent_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Required</label>
    <type>Checkbox</type>
</CustomField>