tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/cpt_note_type__c.field-meta.xml
<CustomField>
    <fullName>cpt_note_type__c</fullName>
    <description>Policy bucket for which CPT catalog this interview template should expose. Valid values match the approved billing policy buckets: Clinical Note, Comp Assess, Peer Note, and Case Management Note. If Has CPT Codes is checked and this field is blank, the interview defaults to Comp Assess.</description>
    <label>CPT Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Note</fullName>
            </value>
            <value>
                <fullName>Comp Assess</fullName>
            </value>
            <value>
                <fullName>Peer Note</fullName>
            </value>
            <value>
                <fullName>Case Management Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>