tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Data_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Data_Retention_Days__c</fullName>
    <label>Data Retention  Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>