tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Demographics_Policy__c.field-meta.xml
<CustomField>
    <fullName>Demographics_Policy__c</fullName>
    <description>Controls whether the Demographics section is shown in interviews based on this template. This section captures/updates Person Account demographic data.</description>
    <inlineHelpText>Choose when to display the Demographics section. This section pre-fills existing Account data and writes new data back to the Person Account.</inlineHelpText>
    <label>Demographics Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
                <default>true</default>
                <label>Optional</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>