tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Goals_Policy__c.field-meta.xml
<CustomField>
    <fullName>Goals_Policy__c</fullName>
    <label>Goals Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feature_Controls</valueSetName>
    </valueSet>
</CustomField>