tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/has_cpt_codes__c.field-meta.xml
<CustomField>
    <fullName>has_cpt_codes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this interview template will display CPT code selection options during the session. This serves as the primary policy flag for enabling billing codes.</description>
    <label>Has CPT Codes</label>
    <type>Checkbox</type>
</CustomField>