tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Income_Benefits_Policy__c.field-meta.xml
<CustomField>
    <fullName>Income_Benefits_Policy__c</fullName>
    <description>Controls whether the Income &amp; Benefits repeating table section is shown in interviews based on this template. Hidden = not shown, Optional = shown but not required, Required = shown and must have at least one entry.</description>
    <inlineHelpText>Choose when to display the Income &amp; Benefits section with repeating rows for income sources/benefits, stated income amounts, and documentation uploads.</inlineHelpText>
    <label>Income &amp; Benefits Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
                <default>true</default>
                <label>Hidden</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>