tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Lint_Passed__c.field-meta.xml
<CustomField>
    <fullName>Lint_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lint Passed</label>
    <type>Checkbox</type>
</CustomField>