tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Lint_Report__c.field-meta.xml
<CustomField>
    <fullName>Lint_Report__c</fullName>
    <label>Lint Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>