tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Lint_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Lint_Run_Date__c</fullName>
    <label>Lint Run Date</label>
    <type>Date</type>
</CustomField>