tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Locked_At__c.field-meta.xml
<CustomField>
    <fullName>Locked_At__c</fullName>
    <label>Locked At</label>
    <type>DateTime</type>
</CustomField>