tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <label>Locked By</label>
    <type>TextArea</type>
</CustomField>