tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Mobile_Active_Since__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Active_Since__c</fullName>
    <label>Mobile Active Since</label>
    <type>Date</type>
</CustomField>