tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Mobile_Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Content_Hash__c</fullName>
    <label>Mobile Content Hash</label>
    <type>TextArea</type>
</CustomField>