tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Mobile_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Manifest__c</fullName>
    <label>Mobile Manifest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>