tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Mobile_Status__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Status__c</fullName>
    <label>Mobile Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>