tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Previous_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version_Id__c</fullName>
    <label>Previous Version Id</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>