tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>InterviewTemplates</relationshipLabel>
    <relationshipName>InterviewTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>