tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/fields/Staff_Signature_Policy__c.field-meta.xml
<CustomField>
    <fullName>Staff_Signature_Policy__c</fullName>
    <label>Staff Signature Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feature_Controls</valueSetName>
    </valueSet>
</CustomField>