tgthrProgramManagement/force-app/main/default/objects/InterviewTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Category__c</columns>
    <columns>Active__c</columns>
    <columns>Available_for_Mobile__c</columns>
    <columns>Status__c</columns>
    <columns>Program__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>